frontend/src/components/css/grid.css
.mainBackground {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background: linear-gradient(to bottom right, rgb(28, 229, 243), rgb(30, 142, 235));
	width: 100%;
	height: 100%;
}

.outsideGrid {
	/* position: fixed; */
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
}

.gridBackground {
	margin-top: 10px;
	background: none;
	display: flex; 
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background: none;
	width: 500px;
	height: 600px;

}

.sampleComponent {
	height: 0px;
	visibility: none;
	z-index: 100;
}

.mainGrid {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	background: none;
	width: 500px;
	height: 500px;
}

.ele {
	height: 25px;
	width: 25px;
	color: transparent;
	background: rgb(171, 237, 241);
	opacity: 35%;
	text-align: center;
	margin: 3px;
	border-radius: 3px;
	animation-name: unclick;
  animation-duration: 500ms;
}

@keyframes unclick {
  to {
    background: rgb(171, 237, 241);
  }
}

.clicked {
	height: 25px;
	width: 25px;
	color: transparent;
	background: rgb(242, 251, 252);
	/* opacity: 70%; */
	text-align: center;
	margin: 3px;
	border-radius: 3px;
	animation-name: click;
	animation-duration: 500ms;
	/* box-shadow: 1px 1px 3px white; */
}

@keyframes click {
  from {
    background: rgb(171, 237, 241);
    }
  to {
    background: rgb(242, 251, 252);
  }
}

.row {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background: none;
}

.rowLit1 {
	background: white;
	opacity: 70%;
	animation: rowLit1;
	animation-duration: 200ms;
}

.drumLit1 {
	background: white;
	opacity: 70%;
	animation: rowLit1;
	animation-duration: 200ms;
}

@keyframes rowLit1 {
  from {
    opacity: 35%;
  }
  
  to {
    opacity: 70%;
  }
}

.rowLit2 {
	background: white;
	opacity: 55%;
	animation: rowLit2;
	animation-duration: 200ms;
}
.drumLit2 {
	background: white;
	opacity: 55%;
	animation: rowLit2;
	animation-duration: 200ms;
}

@keyframes rowLit2 {
  from {
    opacity: 70%;
  }
  
  to {
    opacity: 55%;
  }
}

.rowLit3 {
	background: white;
	opacity: 45%;
	animation: rowLit3;
	animation-duration: 200ms;
}
.drumLit3 {
	background: white;
	opacity: 45%;
	animation: rowLit3;
	animation-duration: 200ms;
}

@keyframes rowLit3 {
  from {
    opacity: 55%;
  }
  
  to {
    opacity: 45%;
  }
}

.rowLit4 {
	background: white;
	opacity: 40%;
	animation: rowLit4;
	animation-duration: 200ms;
}
.drumLit4 {
	background: white;
	opacity: 40%;
	animation: rowLit4;
	animation-duration: 200ms;
}

@keyframes rowLit4 {
  from {
    opacity: 45%;
  }
  
  to {
    opacity: 40%;
  }
}

.rowLit5 {
	animation: rowLit5;
	animation-duration: 200ms;
	background: white;
	opacity: 35%;
}
.drumLit5 {
	animation: rowLit5;
	animation-duration: 200ms;
	background: white;
	opacity: 35%;
}

@keyframes rowlit5 {
  from {
    opacity: 40%;
  }
  
  to {
    opacity: 35%;
  }
}

/* @keyframes lighting {
  from {
    background: rgb(171, 237, 241);
    }
  to {
    background: rgb(242, 251, 252);
  }
} */

.bright {
	height: 25px;
	width: 25px;
	color: transparent;
	background: rgb(242, 251, 252);
	/* opacity: 70%; */
	text-align: center;
	margin: 3px;
	border-radius: 3px;
	animation: ripple 150ms; 
}

@keyframes ripple {
	from {
		opacity: 1;
		transform: scale3d(0.75,0.75,1);
	}
	
	to {
		opacity: 0;
		transform: scale3d(1.5,1.5,1);
	}
}

.kick {
	height: 25px;
	width: 25px;
	color: transparent;
	background: rgb(242, 251, 252);
	/* opacity: 70%; */
	text-align: center;
	margin: 3px;
	border-radius: 3px;
	animation: kick 300ms; 
}

@keyframes kick {
  from {
    opacity: 1;
    transform: scale3d(0.75,0.75,1);
  }
  
  to {
    opacity: 0;
    transform: scale3d(2,2,1);
  }
}

.drumRack {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	background: none;
	width: 500px;
	height: 100px;
}

.menuIcon {
	position: fixed;
	top: 4%;
	left: 5%;
	height: 50px;
	width: 60px;
}

.menuIcon .hamburger {
	position:absolute;
	left: 12px;
	top: 8px;
	transform: translate(-50%, -50%);
	height: 4px;
	width: 50px;
	background-color: #22313F;
	transition: all .1s;
	opacity: 0.5;
}

.menuIcon .hamburger:before {
	position:absolute;
	content: '';
	height: 4px;
	width: 40px;
	top: -10px;
	background-color: #22313F;
	transition: all .4s;
	
}

.menuIcon .hamburger:after {
	position:absolute;
	content: '';
	height: 4px;
	width: 40px;
	top: 10px;
	background-color: #22313F;
	transition: all .3s;
}
.menuIcon:hover .hamburger::after,.menuIcon:hover .hamburger::before {
	width: 50px;
}

.menuIcon:hover .hamburger{
	width: 40px;
}

.menuIcon:hover {
	cursor: pointer;
}

.sidebar {
	position:fixed;
	width: 150px;
	left: 0px;
	top: 70px;
	height: 35vh;
	background-color:rgb(179, 197, 213);
	color: #22313F;
	/* -webkit-clip-path: polygon(0% 0%, 50% 0%, 0% 50%, 0% 100%); */
	transition: all .5s;
	opacity: 0.6;
	border-radius: 0px 5px 5px 0px;
	border: solid white 0.5px;
	outline: none;
}

.hidebar {
	position:fixed;
	width: 150px;
	left: -150px;
	height: 35vh;
	background-color:rgb(179, 197, 213);
	color:#FAFAFA;
	/* -webkit-clip-path: polygon(0% 0%, 50% 0%, 0% 50%, 0% 100%); */
	transition: all .5s;
	opacity: 0.6;
	border-radius: 0px 5px 5px 0px;
}

.sidebar nav ul {
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: 33px;
	list-style:none;
	transform:translate(-50%, -50%);
	text-align:center;
}

.sidebar nav ul li, .sidebar nav ul a {
	height: 20px;
	margin-bottom: 60px;
	margin-top: 60px;
	font-family: 'Titillium Web', sans-serif;
	color: #22313F;
	opacity: 0.8;
	text-decoration: none;
}

.sidebar nav ul li:hover {
	cursor: pointer;
}

.loadingPage {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	-webkit-animation: fadeinout 1s linear infinite;
    animation: fadeinout 1s linear infinite;	
}


.loadingText {
	height: 50px;
	width: 545px;
	font-size: 50px;
	font-family: Arial, Helvetica, sans-serif;
	color: white;
	opacity: 50%;
}

.loadingGrid {
  margin: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 400px;
  width: 300px;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
	/* opacity: 80%; */
}


@-webkit-keyframes fadeinout {
  0%,100% { opacity: .25; }
  50% { opacity: 1; }
}

@keyframes fadeinout {
  0%,100% { opacity: .25; }
  50% { opacity: 1; }
}

.welcomeMessage {
	position: absolute;
	top: 46%;
	left: 0.5%;
	font-family: 'Titillium Web', sans-serif;
	color: #22313F;
	opacity: 0.5;
	transition: all 0.5s;
}

/* .welcomeMessage:after {
	position: absolute;
	top: 2.5%;
	left: 0%;
	content: "";
	background-color: #22313F;
	width: 1%;
	height: 3px;
	animation: underline .8s;
	animation-fill-mode: forwards;
}

@keyframes underline {
	from {width: 1%;}
	to {width: 16.5%;}
} */
.hideMessage {
	position: absolute;
	top: 46%;
	left: -20%;
	font-family: 'Titillium Web', sans-serif;
	color: #22313F;
	opacity: 0.5;
}

.gridShowTitle {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 50px;
	width: 545px;
	font-size: 30px;
	font-family: Arial, Helvetica, sans-serif;
	color: white;
	font-weight: bolder;
	opacity: 50%;
	margin-top: 20px;
	letter-spacing: 1px;
}

.gridTitleDisplay {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	
}

.inputTitle {
	-webkit-appearance: none;
	font-size: 30px;
	color: white;
	font-weight: bolder;
	width: 300px;
	background: transparent;
	height: 30px;
	border: 1px solid white;
	outline: none;
	letter-spacing: 2px;
}

.titleSubmit {
	margin: 15px;
  font-size: 17px;
  width: 100px;
  height: 25px;
  border-radius: 4px;
  color: white;
  background: rgba(201, 201, 201, 0.274);
	outline: none;
	opacity: 100%;
}

a {
	color: inherit;
}
.mute-btn{
	height: 50px;
	text-align: right;
	padding-right: 100px;
	cursor: pointer;
}

.fas {
	font-size: 50px;
	color: black;
}

